--- a/XFFeatures/ShellApp/ShellApp/Views/SettingsPage.xaml
+++ b/XFFeatures/ShellApp/ShellApp/Views/SettingsPage.xaml
@@ -1,15 +1,23 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
-<ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             xmlns:d="http://xamarin.com/schemas/2014/forms/design"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-             mc:Ignorable="d"
-             x:Class="ShellApp.Views.SettingsPage">
+<ContentPage
+    x:Class="ShellApp.Views.SettingsPage"
+    xmlns="http://xamarin.com/schemas/2014/forms"
+    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+    xmlns:d="http://xamarin.com/schemas/2014/forms/design"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    Shell.NavBarIsVisible="False"
+    mc:Ignorable="d">
     <ContentPage.Content>
         <StackLayout>
-            <Label Text="Welcome to Xamarin.Forms!"
-                VerticalOptions="CenterAndExpand" 
-                HorizontalOptions="CenterAndExpand" />
+            <Label
+                HorizontalOptions="CenterAndExpand"
+                Text="Welcome to Settings!"
+                VerticalOptions="CenterAndExpand" />
+            <Button
+                BackgroundColor="#E10555"
+                Clicked="Button_OnClicked"
+                Text="Go Back"
+                TextColor="White" />
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
